--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 .header {
 	height: 300px;
 	background-color: #1423EE;
-	text-shadow: 3px 3px 3px #7C7C7C;
+	text-shadow: 2px 2px 3px #7C7C7C;
 	padding-top: 50px;
 	color: #fff;
 	padding-right: 5px;
@@ -13,4 +13,8 @@
 	padding-bottom: 100px;
 	margin-bottom: -80px;
 	box-shadow: 2px 6px 12px -4px rgba(133,130,133,1);
+}
+.panel-heading h3 {
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
