--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 .header {
 	height: 300px;
-	background-color: #1423EE;
+	background-color: #148FEE;
 	text-shadow: 2px 2px 3px #7C7C7C;
 	padding-top: 50px;
 	color: #fff;
