--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,10 @@
 	margin-top: 5px;
 	margin-bottom: 5px;
 }
+.bayang {
+	box-shadow: 2px 6px 12px -4px rgba(133,130,133,1);
+	background: #fff;
+	padding: 10px;
+	border-radius: 3px;
+	margin-bottom: 20px;
+}
