--- a/admin/style.css
+++ b/admin/style.css
@@ -73,11 +73,11 @@ body {
 	width: 100%;
 	z-index: 1;
 	margin: 0px; 
-	background-color: #383636; 
+	background-color: #fff; 
 	border:0px; 
-	border-bottom: 2px solid #337AB7; 
+	border-bottom: 2px solid #fff; 
 	border-radius:0px; color: #fff; 
-	box-shadow: 2px 6px 5px -4px rgba(88, 88, 88, 0.5); 
+	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
 	/*position: fixed; */
 }
 }
