--- a/admin/style.css
+++ b/admin/style.css
@@ -3,7 +3,7 @@
 	background: #383636;
 }
 .mymenu {
-	height: 100ch;
+	height: 100vh;
 	background: #383636;
 	position: fixed;
 	width: 25%;
@@ -83,4 +83,36 @@ body {
 	box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.8);
 	/*position: fixed; */
 }
+.panel-green {
+	border-color: #4DBA21;
+}
+.panel-green > .panel-heading {
+    color: #FFF;
+    background-color: #4DBA21;
+    border-color: #4DBA21;
+}
+.panel-red {
+	border-color: #FF3333;
+}
+.panel-red > .panel-heading {
+    color: #FFF;
+    background-color: #FF3333;
+    border-color: #FF3333;
+}
+
+.panel-blue {
+	border-color: #00A9F7;
+}
+.panel-blue > .panel-heading {
+    color: #FFF;
+    background-color: #00A9F7;
+    border-color: #00A9F7;
+}
+.panel-orange {
+	border-color: #FF9110;
+}
+.panel-orange > .panel-heading {
+    color: #FFF;
+    background-color: #FF9110;
+    border-color: #FF9110;
 }
