--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 	min-height: 300px;
 	background-color: #148FEE;
 	text-shadow: 2px 2px 3px #7C7C7C;
-	padding-top: 50px;
+	padding-top: 25px;
 	color: #fff;
 	padding-right: 5px;
 	padding-left: 5px;
@@ -63,4 +63,9 @@
 }
 .post-hover:hover {
 	background-color: #E6E6E6;
+}
+#gallery {
+	max-height: 400px;
+	overflow: hidden;
+	margin-bottom: 10px;
 }
