--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 .header {
 	min-height: 300px;
-	background-color: #148FEE;
+	background-color: #05497E;
 	text-shadow: 2px 2px 3px #7C7C7C;
 	padding-top: 25px;
 	color: #fff;
@@ -65,7 +65,41 @@
 	background-color: #E6E6E6;
 }
 #gallery {
-	max-height: 400px;
+	height: 400px;
 	overflow: hidden;
 	margin-bottom: 10px;
+}
+.slider-image {
+	height: 600px; 
+	background-position: center center;
+	background-size: cover;
+}
+.slider-image h2 {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	color: #fff;
+	margin-top: 0px;
+	background-color: rgba(0,0,0,0.5);
+}
+.profil {
+	height: 250px;
+	overflow: hidden;
+}
+.footer {
+	background-color: #05497E;
+	color: #fff;
+	padding: 10px;
+}
+.footer h3 small {
+	color: #fff;
+}
+.footer h3 small a {
+	text-decoration: none;
+	color: #fff;
+}
+.footer h3 small a:hover {
+	color: #13A1DC;
+}
+.agenda-index {
+	border-bottom: 1px #EAEAEA solid;
 }
